Updates to HTML. Rules are now inserted into HTML document

--- a/sevenDayNotice/HTML Templete Files/notice.html
+++ b/sevenDayNotice/HTML Templete Files/notice.html
@@ -9,7 +9,7 @@
     <div class="resident-info">
       <p>#ResidentOne#</p>
       <p>#ResidentTwo#</p>
-      <p>#LotNunber#</p>
+      <p>#LotNumber#</p>
       <p>#Address#</p>
       <p>#CityState#</p>
     </div>
@@ -32,7 +32,7 @@
     <br>
     <p>PLEASE GOVERN YOURSELF ACCORDINGLY.</p>
     <p>Sincerely,</p>
-    <br><br><br>
+    <br><br>
     <p>____________________________________</p>
     <p>Frecia Hurtado/Community Manager</p>
     <p>cc: Jerome R. Schechter, Attorney at Law</p>
