--- a/sevenDayNotice/HTML Templete Files/notice.html
+++ b/sevenDayNotice/HTML Templete Files/notice.html
@@ -7,19 +7,18 @@
   <body>
     <h2 class="community-name">HAVEN LAKE ESTATES</h2>
     <div class="resident-info">
-      <p>#ResidentOne#</p>
-      <p>#ResidentTwo#</p>
-      <p>#LotNumber#</p>
-      <p>#Address#</p>
-      <p>#CityState#</p>
+      <p>#ResidentOne#<br>
+      #ResidentTwo#<br>
+      #LotNumber#<br>
+      #Address#<br>
+      #CityState#</p>
     </div>
-    
+
     <p>Re:  	Notice of Rule Violations/Haven Lake Estates and Violation of Chapter 723.061</p>
     <p>Dear #ResidentOne#,</p>
-    
+
     <div class="rules">
-      <p>#Rules#</p>
-      <br>
+      #Rules#
       <p>You are in violation of the above Rules &amp; Regulations and the Park Management has recently become aware that:</p>
       <ul>
         #BulletPoints#
@@ -29,14 +28,13 @@
       <p>If you fail and/or refuse to comply with this notice within seven (7) days from the delivery, as defined above, your tenancy will be terminated.  Should you thereafter fail and/or refuse to remove your home from the premises, eviction proceedings will be filed against you, seeking not only your removal from Haven Lake Estates, but also court costs, attorney's fees, and any other relief a court may deem just and proper.</p>
       <p>A second violation of a properly promulgated rule or regulation or of Florida Statute, Chapter 723 within 12 months of the first violation is unequivocally a ground for eviction, and it is not a defense to any eviction proceeding that a violation has been cured after the second violation.</p>
     </div>
-    <br>
     <p>PLEASE GOVERN YOURSELF ACCORDINGLY.</p>
     <p>Sincerely,</p>
-    <br><br>
+    <br>
     <p>____________________________________</p>
-    <p>Frecia Hurtado/Community Manager</p>
-    <p>cc: Jerome R. Schechter, Attorney at Law</p>
-    <br><br>
+    <p>Frecia Hurtado/Community Manager <br>
+    cc: Jerome R. Schechter, Attorney at Law</p>
+    <br>
     <p>DATE AND TIME OF POSTING: #Date#</p>
   </body>
 </html>
